--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"autoprefixer": "^10.4.20",
+		"mdsvex": "^0.12.3",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
@@ -30,6 +31,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
-		"lucide-svelte": "^0.454.0"
+		"lucide-svelte": "^0.454.0",
+		"shiki": "^1.22.2"
 	}
 }
